--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/integrador
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\kakar\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\lball\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.mysql.connector.classpath}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
